# Stellarator-Database

./: .gitignore  README.md  db-desc.py  db-vmec.py  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tutorial.ipynb  versioneer.py
.github/workflows/: release.yml
stelladb/: __init__.py  _version.py  db_desc.py  db_vmec.py  device.py  getters.py  urls.py
tutorials/: tutorial_basics.ipynb  tutorial_upload_multiple_files.py  tutorial_upload_nested_folders.py
